# infom114_LaboMDL

./: .babelrc  .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  changelog.md  codecov.sh  docker-compose.yaml  entrypoint.sh  jsdoc.conf.json  logdiary.md  openapi.json  package-lock.json  package.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
doc/: README.md
doc/uml/: database_schema.wsd
front/: README.md
front/__mocks__/: fetch.mock.js  storage.mock.js
front/js/: App.jsx  index.js
front/scss/: _animation.scss  main.scss
front/tests/: index.test.js
migrations/2020-02-05-155615_create_users/: down.sql  up.sql
migrations/2020-03-15-004039_create_posts/: down.sql  up.sql
migrations/2020-03-15-133755_create_roles/: down.sql  up.sql
migrations/2020-03-16-063529_create_addresses/: down.sql  up.sql
migrations/2020-03-17-155615_create_users/: down.sql  up.sql
migrations/2020-03-17-156823_create_users_roles/: down.sql  up.sql
migrations/2020-03-25-135000_create_capabilities/: down.sql  up.sql
migrations/2020-03-25-135044_create_roles_capabilities/: down.sql  up.sql
migrations/2020-03-26-114602_create_tokens/: down.sql  up.sql
migrations/2020-03-26-155615_create_users/: up.sql
migrations/2020-03-27-172304_create_tags/: down.sql  up.sql
migrations/2020-03-27-192322_create_tags_subscription/: down.sql  up.sql
migrations/2020-03-28-090555_update_roles_color/: down.sql  (+1 more)
scripts/: automatic_merge.sh  diesel_migration_run.sh  diesel_reset.sh  diesel_revert_all.sh  entrypoint.sh  purge.sh  reload.sh  setup_test.sh
src/: auth.rs  bin.rs  conf.rs  lib.rs  library.rs  main.rs  schema.rs  schema_old.rs
static/: index.html
templates/: about.hbs  error.hbs  footer.hbs  hidden.hbs  index.hbs  layout.hbs  login.hbs  nav.hbs
tests/: auth.rs  init.rs  test.rs
uml/: database_schema.wsd
(+359 files in other folders)
