[package]
name = "unanimity"
version = "0.0.2"
authors = ["Guillaume Latour <g0latour@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
diesel = {version = "1.4.3", features = ["mysql"]}
bcrypt = "0.6.1"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "handlebars_templates", "diesel_mysql_pool"]