[package]
name = "unanimity"
version = "0.0.3"
authors = ["Guillaume Latour <g0latour@gmail.com>"]
edition = "2018"

[lib]
name = "unanimitylibrary"
path = "src/lib.rs"

[[bin]]
name = "unanimitybin"
path = "src/bin.rs"


[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15"
diesel = {version = "1.4", features = ["mysql"]}
bcrypt = "0.6"
regex = "1.3"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["json", "handlebars_templates", "diesel_mysql_pool"]