[package]
name = "unanimity"
version = "0.4.1"
authors = ["Guillaume Latour <g0latour@gmail.com>"]
edition = "2018"
default-run = "unanimity"

[lib]
name = "unanimitylibrary"
path = "src/library.rs"

[dependencies]
rocket = "0.4.4"
serde = { version="1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
diesel = {version = "1.4.3", features = ["mysql", "chrono"]}
bcrypt = "0.6.1"
regex = "1.3.4"
chrono = { version= "0.4", features = ["serde"] }
jsonwebtoken = "5.0.1"
either = "1.5.3"
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json", "handlebars_templates", "diesel_mysql_pool"]
